--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,4 @@
-echo "fastapi\nuvicorn\nrequests\nstreamlit" > requirements.txt
+echo fastapi > requirements.txt
+echo uvicorn >> requirements.txt
+echo requests >> requirements.txt
+echo streamlit >> requirements.txt
